studies run setup

--- a/examples/studies/study_DatabaseGenerator.ipynb
+++ b/examples/studies/study_DatabaseGenerator.ipynb
@@ -9,7 +9,10 @@
    },
    "outputs": [],
    "source": [
+    "using Pkg\n",
+    "Pkg.activate(\"../..\")\n",
     "using Revise\n",
+    "using TGLFNN\n",
     "using FUSE\n",
     "using Plots;\n",
     "FUSE.logging(Logging.Info; actors=Logging.Info);"
@@ -32,6 +35,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "44d68040-b7f2-4f8a-8e63-58bed33c691b",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "using IMAS\n",
+    "dd = IMAS.json2imas(\"/mnt/beegfs/users/neisert/ODSs/d3d/fuse_prepared_inputs/ods_161582_2300.json\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9748a49b-057f-4537-9d7e-9e3f2462ebed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot(dd.equilibrium,wall)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d984ab89-239b-46c9-add5-8424aefc3753",
    "metadata": {
     "tags": []
@@ -42,7 +68,7 @@
     "sty.server = \"saga\"\n",
     "sty.n_workers = 2\n",
     "\n",
-    "sty.save_folder = \"/mnt/beegfs/users/neisert/ODSs/ukaea/seq-1\"\n",
+    "sty.save_folder = \"/mnt/beegfs/users/neisert/ODSs/ukaea/seq-2\"\n",
     "\n",
     "sty.release_workers_after_run = true # this is the default behavior and releases workers after running the study\n",
     "\n",
@@ -58,22 +84,215 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dd = IMAS.h5i2imas(\"/mnt/beegfs/users/neisert/ODSs/ukaea/seq-2/master.h5\");\n",
-    "dd.global_time= 15.\n",
+    "dd = IMAS.h5i2imas(\"/mnt/beegfs/users/neisert/ODSs/ukaea/seq-1/imasdb/step/3/88888/2/master.h5\");\n",
+    "dd.global_time=102.07396074300034\n",
     "chk = FUSE.Checkpoint()\n",
     "chk[:init] = dd, FUSE.ParametersInits(),FUSE.ParametersActors()\n",
     "#dd.equilibrium.time_slice[].profiles_2d.psi = dd.equilibrium.time_slice[].profiles_2d.psi.T #grid1 grid2\n",
-    "#FUSE.digest(dd)"
+    "#FUSE.digest(dd)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1369ed2-0cb5-4b34-bcff-c1024da742d1",
+   "id": "cefc2fb9-dff3-422f-b19b-46ed3cf6c0b3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dd.equilibrium.time_slice[t].time"
+    "ini_step = FUSE.ParametersInits();\n",
+    "ini_step.general.dd = dd\n",
+    "ini_step.general.init_from=:ods\n",
+    "\n",
+    "FUSE.ini_from_ods!(ini_step;restore_expressions=false)\n",
+    "\n",
+    "ini_step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba107d86-92ff-4be3-93bc-62b1cdba496b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dd.global_time = 1500.\n",
+    "plot(dd.equilibrium)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6c68513-8353-4498-9db4-9bdf06608d47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dd.global_time = 1500.\n",
+    "plot(dd.equilibrium)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0f42238-dcb9-4929-8aff-25a0efce168b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "standard_lmode_dcit = FUSE.profiles[:Lmode]\n",
+    "standard_lmode_dcit.tedge = 3.0 ↔ [2.5,3.5]\n",
+    "\n",
+    "ini_step.core_profiles.profiles = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fc0818f-5f5c-4e95-ac79-cf1cbde068cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = plot(dd.equilibrium)\n",
+    "\n",
+    "ini_step.general.dd = missing\n",
+    "ini_step.general.init_from = :scalars\n",
+    "\n",
+    "ini_step.core_profiles.greenwald_fraction_ped = 0.5 ↔ [0.3,0.85]\n",
+    "ini_step.core_profiles.T_ratio = 0.5 ↔ [0.15,1.2]\n",
+    "\n",
+    "ini_step.equilibrium.boundary_from = :scalars\n",
+    "ini_step.core_profiles.zeff = 3.0 ↔ [2.5,3.5]\n",
+    "\n",
+    "# Tom can figure these out\n",
+    "ini_step.core_profiles.w_ped = 0.05 #↔ [2.5,3.5]\n",
+    "\n",
+    "\n",
+    "\n",
+    "p0 =  630797.\n",
+    "ini_step.equilibrium.pressure_core = p0 ↔ [p0,p0*1.5]\n",
+    "ini_step.core_profiles.zeff = 3.0 ↔ [2.5,3.5]\n",
+    "\n",
+    "ini_step.core_profiles.T_shaping =  1.5 ↔ [0.8,2.2]\n",
+    "ini_step.core_profiles.n_shaping =  1.5 ↔ [0.8,2.2]\n",
+    "ini_step.core_profiles.rot_core = 0.0 \n",
+    "\n",
+    "ini_step.core_profiles.impurity = :Ar\n",
+    "ini_step.core_profiles.bulk = :DT\n",
+    "ini_step.core_profiles.helium_fraction = 0.0\n",
+    "#ini_step.core_profiles.zeff = 3.0 ↔ [2.5,3.5]\n",
+    "\n",
+    "for i in 1:3\n",
+    "    @show i\n",
+    "    dd_step = IMAS.dd()\n",
+    "    \n",
+    "    FUSE.rand!(ini_step)\n",
+    "    FUSE.init(dd_step,ini_step,act)\n",
+    "    plot!(p,dd_step.equilibrium)\n",
+    "end\n",
+    "display(p)\n",
+    "# add a ne_sep / ne_ped ratio to the ini and set that accordingly to the s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbb3c356-4e35-4fac-aa56-d6c8233bc671",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = plot(dd.core_profiles.profiles_1d[].electrons.temperature)\n",
+    "for shape_1 in 0.8:0.1:2.2\n",
+    "    for shape_2 in 0.8:0.1:2.2\n",
+    "        profile = IMAS.Hmode_profiles(\n",
+    "        plot!(p,profile)\n",
+    "    end\n",
+    "end\n",
+    "display(p)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8bbb5d6-dad8-4d7f-b467-613c94de9196",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ini_step.core_profiles.profiles = Dict(:L_mode => Dict(:core=>1e4,:edge=70,:shape=0.8,.....),:Hmode=> Dict(:bla=>10), :ITB=> Dict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57fe50bb-967c-4c84-93ad-9ee4615eeddc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to find the index of the nearest value\n",
+    "function find_nearest_index(array, target)\n",
+    "    differences = abs.(array .- target)  # Compute the absolute differences\n",
+    "    nearest_index = argmin(differences)  # Find the index of the smallest difference\n",
+    "    return nearest_index\n",
+    "end\n",
+    "index_of_nearest = find_nearest_index(dd.summary.time, dd.global_time)\n",
+    "dd.summary.local.pedestal.t_e.value[index_of_nearest]\n",
+    "\n",
+    "IMAS.Hmode_profiles(dd.core_profiles.profiles_1d[].electrons.temperature[end], dd.summary.local.pedestal.t_e.value[index_of_nearest], dd.core_profiles.profiles_1d[].electrons.temperature[1],length(dd.core_profiles.profiles_1d[].grid.rho_tor_norm))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3b19902-d24d-428c-8b79-b218bd81e813",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "length(dd.core_profiles.profiles_1d[].grid.rho_tor_norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41addea7-5c76-4427-9ccf-b7bc139c9933",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot(dd.core_profiles;only=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "083e5e9b-d08f-41b5-89cb-4f07029e1509",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot(dd.core_profiles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f8adfd9-503f-4485-8b38-3eb11b8bd07b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ini.core_profiles.zeff = 2.5 ↔ [1.4,4.5]\n",
+    "ini.core_profiles.greenwald_fraction_ped = 0.2 ↔[0.2,0.75*0.9]\n",
+    "ini.core_profiles.temp_shape "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cabb2b81-321b-4cf1-b398-b8516a29a682",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dd,ini,act = chk[:init]\n",
+    "dd.global_time= 14.1\n",
+    "ini_test = FUSE.ParametersInits()\n",
+    "ini_test.general.init_from =:ods\n",
+    "ini_test.general.dd = dd\n",
+    "ini_test\n",
+    "FUSE.ini_from_ods!(ini_test;restore_expressions=false)"
    ]
   },
   {
@@ -85,64 +304,108 @@
    "source": [
     "#dd = IMAS.h5i2imas(\"/mnt/beegfs/users/neisert/ODSs/ukaea/seq-2/master.h5\");\n",
     "dd,ini,act = chk[:init]\n",
-    "t = 1\n",
-    "dd.equilibrium.time_slice[t].profiles_2d[1].psi = Matrix(transpose(dd.equilibrium.time_slice[t].profiles_2d[1].psi))\n",
+    "rhorange = range(0.1, 0.9, 9)\n",
+    "act = FUSE.ParametersActors()\n",
+    "act.ActorTGLF.rho_transport = rhorange\n",
+    "\n",
+    "t = 20\n",
+    "#=dd.global_time=dd.summary.time[t+1]\n",
+    "dd.equilibrium.time_slice[dd.summary.time[t+1]].profiles_2d[1].psi = Matrix(transpose(dd.equilibrium.time_slice[t].profiles_2d[1].psi))\n",
+    "dd.equilibrium.time_slice[dd.summary.time[t+1]].profiles_1d.squareness_lower_inner = zeros(100)\n",
+    "dd.equilibrium.time_slice[dd.summary.time[t+1]].profiles_1d.squareness_lower_outer = zeros(100)\n",
+    "dd.equilibrium.time_slice[dd.summary.time[t+1]].profiles_1d.squareness_upper_inner = zeros(100)\n",
+    "dd.equilibrium.time_slice[dd.summary.time[t+1]].profiles_1d.squareness_upper_outer = zeros(100)\n",
+    "\n",
+    "actor_tglf = FUSE.ActorTGLF(dd,act;rho_transport=rhorange) #dd_iter\n",
+    "TGLFNN.save(actor_tglf.input_tglfs[1], \"./input_tglfs_seq1/input.tglf_test_2\")\n",
+    "=#\n",
+    "#ini_test = FUSE.ParametersInits()\n",
+    "#ini_test.general.init_from =:ods\n",
+    "#ini_test.general.dd = dd\n",
+    "#ini_test\n",
+    "#FUSE.ini_from_ods!(ini_test;restore_expressions=false)\n",
+    "\n",
     "plot(dd.equilibrium.time_slice[t])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "364f77c0-2867-451d-9c20-8a14902a6ac6",
+   "id": "071dfba7-52a1-44fc-8290-6e44e2f0d67b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dd.equilibrium.time_slice[t].time\n",
-    "dd.core_profiles.time[1]\n",
-    "dd.core_profiles.profiles_1d[1].time"
+    "ini_test"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84c8acba-fab3-43e9-914e-b9ac336d757f",
+   "id": "8bb363c5-a2e4-41fd-afa1-7355aac81821",
    "metadata": {},
    "outputs": [],
    "source": [
-    "FUSE.ParametersActors().ActorTGLF;\n",
-    "FUSE.ParametersActors().ActorTGLF(dd, act.ActorTGLF)"
+    "#for (t) in dd.summary.time\n",
+    "#    println(t);\n",
+    "#end\n",
+    "println(size(dd.summary.time))\n",
+    "println(dd.summary.time[1])\n",
+    "println(dd.equilibrium.time_slice[dd.summary.time[1]].time)\n",
+    "println(dd.summary.time[2])\n",
+    "println(dd.equilibrium.time_slice[dd.summary.time[3]].time)\n",
+    "println(dd.summary.time[19])\n",
+    "println(dd.summary.time[20])\n",
+    "println(dd.equilibrium.time_slice[dd.summary.time[20]].time)\n",
+    "println(dd.equilibrium.time_slice[dd.summary.time[21]].time)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6516747a-f558-4a8c-99a3-961facb3f1ce",
+   "id": "665fd86f-4a09-491d-908c-f757590ed3ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "using TGLFNN\n",
-    "#dd.core_profiles.profiles_1d[1].time = dd.core_profiles.time[1]\n",
-    "dd.equilibrium.time_slice[t].profiles_1d.squareness_lower_inner = zeros(100)\n",
-    "dd.equilibrium.time_slice[t].profiles_1d.squareness_lower_outer = zeros(100)\n",
-    "dd.equilibrium.time_slice[t].profiles_1d.squareness_upper_inner = zeros(100)\n",
-    "dd.equilibrium.time_slice[t].profiles_1d.squareness_upper_outer = zeros(100)\n",
-    "rhorange = range(0.05, 0.95, 91)\n",
-    "dd.global_time= 14.000001659586568\n",
-    "act = FUSE.ParametersActors()\n",
-    "act.ActorTGLF.rho_transport = rhorange\n",
-    "#dd_tglf = dd.equilibrium.time_slice[t]\n",
-    "actor_tglf = FUSE.ActorTGLF(dd,act;rho_transport=rhorange) #dd_iter\n",
-    "TGLFNN.save_inputtglf(actor_tglf.input_tglfs[1], \"input.tglf_test\")"
+    "FUSE.ActorTGLF"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "f5c4cc9e-2a54-4b9c-ba23-b0c165ded6d3",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "dd.summary.time[t]"
+    "rhorange = range(0.1, 0.9, 9)\n",
+    "act = FUSE.ParametersActors()\n",
+    "#act.ActorTGLF.tglfnn_model = \"sat1_em_d3d_azf-1\"\n",
+    "\n",
+    "\n",
+    "for t in 1:1:2\n",
+    "    println(dd.summary.time[t])\n",
+    "    println(dd.equilibrium.time_slice[dd.summary.time[t+1]].time)\n",
+    "    time = round(Int,dd.summary.time[t])\n",
+    "    dd.global_time=dd.summary.time[t]\n",
+    "    #=dd.equilibrium.time_slice[dd.summary.time[t+1]].profiles_2d[1].psi = Matrix(transpose(dd.equilibrium.time_slice[t].profiles_2d[1].psi))\n",
+    "    dd.equilibrium.time_slice[dd.summary.time[t+1]].profiles_1d.squareness_lower_inner = zeros(100)\n",
+    "    dd.equilibrium.time_slice[dd.summary.time[t+1]].profiles_1d.squareness_lower_outer = zeros(100)\n",
+    "    dd.equilibrium.time_slice[dd.summary.time[t+1]].profiles_1d.squareness_upper_inner = zeros(100)\n",
+    "    dd.equilibrium.time_slice[dd.summary.time[t+1]].profiles_1d.squareness_upper_outer = zeros(100)=#\n",
+    "    #dd.equilibrium.time_slice[dd.summary.time[t]].profiles_2d[1].psi = Matrix(transpose(dd.equilibrium.time_slice[dd.summary.time[t]].profiles_2d[1].psi))\n",
+    "    dd.equilibrium.time_slice[dd.summary.time[t]].profiles_1d.squareness_lower_inner = zeros(100)\n",
+    "    dd.equilibrium.time_slice[dd.summary.time[t]].profiles_1d.squareness_lower_outer = zeros(100)\n",
+    "    dd.equilibrium.time_slice[dd.summary.time[t]].profiles_1d.squareness_upper_inner = zeros(100)\n",
+    "    dd.equilibrium.time_slice[dd.summary.time[t]].profiles_1d.squareness_upper_outer = zeros(100)\n",
+    "    \n",
+    "    actor_tglf = FUSE.ActorTGLF(dd,act;rho_transport=rhorange, electromagnetic=true, lump_ions=false) #dd_iter\n",
+    "     for k in 1:length(rhorange)\n",
+    "         println(k, \" \", rhorange[k])\n",
+    "         TGLFNN.save(actor_tglf.input_tglfs[k], \"./input_tglfs_seq1_v2/input.tglf_$(time)_$(rhorange[k])\")\n",
+    "     end\n",
+    "    plot(dd.equilibrium.time_slice[t])\n",
+    "end"
    ]
   },
   {
@@ -294,7 +557,6 @@
     "ini.core_profiles.zeff = 2.5 ↔ [1.4,4.5]\n",
     "ini.core_profiles.greenwald_fraction_ped = 0.2 ↔[0.2,0.75*0.9]\n",
     "ini.core_profiles.temp_shape \n",
-    "\n",
     "# H&CD\n",
     "ini.nb_unit[1].power_launched = 33.4e6 ↔ [0.0,33.4e6]\n",
     "ini.nb_unit[1].beam_energy = 1e6 ↔ [1e5,1e6]\n",
@@ -386,15 +648,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.10.0",
+   "display_name": "Julia 1.x 1.11.3",
    "language": "julia",
-   "name": "julia-1.10"
+   "name": "julia-1.x-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.10.0"
+   "version": "1.11.3"
   }
  },
  "nbformat": 4,
